Added api where the servers save its status

--- a/settings/config.py.sample
+++ b/settings/config.py.sample
@@ -84,6 +84,10 @@ privkey_pem=''
 
 yes_static=True
 
+# API key
+
+api_key=''
+
 #Database mysql config, if you want anything...
 
 #WebModel.connections={'default': {'name': 'default', 'host': 'localhost', 'user': 'root', 'password': '', 'db': 'example', 'charset': 'utf8mb4', 'set_connection': False} }
